--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/taskmanagement
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
+JWT_EXPIRE=30d
 NODE_ENV=development
+CLIENT_URL=http://localhost:3000
